1999-08-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m: Accomodate c_* renames in defobj/directory.m throughout.

1999-08-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m ([VarProbe -probeAsString:Buffer:withFullPrecision:],
	[VarProbe -setData:ToString:]): If long and long long are the
	same size, don't use LLFMT.

	* swarm_rts_routines.m (skip_typespec): Add case for long double.

	* MessageProbe.m ([MessageProbe -setArg:ToString:], [MessageProbe
	-doubleDynamicCallOn:], [MessageProbe -longDynamicCallOn:]): Add
	support for [unsigned] long long and long double.

	* VarProbe.m ([VarProbe -createEnd], probe_as_int,
	probe_as_double, [VarProbe
	-probeAsString:Buffer:withFullPrecision:], [VarProbe
	-setData:To:], [VarProbe -setData:ToString:]): Add support
	for [unsigned] long long and long double.

1999-08-08  Alex Lancaster  <alex@santafe.edu>

	* objectbase.h (ActivityControl): Move -attachToActivity: to USING
	phase, doesn't need to be a CREATING phase method.

1999-08-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* swarm_rts_routines.m (skip_typespec): Handle [unsigned] long longs.

	* ProbeMap.m ([ProbeMap -addProbe:], [ProbeMap -_fastAddProbe_:]): 
	([ProbeMap -dropProbeMap:aProbeMap]): Use STRDUP instead of strdup.

	* VarProbe.m ([VarProbe -setProbedVariable:], [VarProbe
	-setFloatFormat:], [VarProbe -setData:ToString:]): Likewise.

	* MessageProbe.m ([MessageProbe -createEnd], [MessageProbe
	-setArg:ToString:]): Use STRDUP instead of strdup.
	(dynamicCallOn): Use ZSTRDUP instead of strdup.

1999-08-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m ([VarProbe -probeAsString:Buffer:withFullPrecision:]): 
	Use raiseEvent instead of printf for error.

1999-07-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* CompleteProbeMap.m, CompleteVarMap.m, DefaultProbeMap.m, 
	MessageProbe.m, ProbeMap.m, VarProbe.m: Accomodate J* to SD_*
	and swarm directory function renames.
