@@ -1,3 +1,13 @@
+1999-08-09  Alex Lancaster  <alex@santafe.edu>
+
+	* objectbase.h (EmptyProbeMap): Add +create:forClass: convenience
+	create message to protocol.
+
+	* EmptyProbeMap.[hm] ([EmptyProbeMap +create:forClass:]): New
+	convenience factory method for creating an EmptyProbeMap, but with
+	the appropriate class set.  Make class conform to EmptyProbeMap
+	protocol.  Add all appropriate phase tags.
+
 1999-08-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* VarProbe.m: Accomodate c_* renames in defobj/directory.m throughout.
